# linear_type

./: .gitsigners  0  Cargo.toml  README.md  refs  release.toml  signature
crates/linear_ty/: Cargo.toml
crates/linear_ty/examples/: simple_states.rs
crates/linear_ty/src/: lib.rs  parts.rs
crates/linear_ty/tests/compile_fail/: linear_non_exhaustive.rs  linear_non_exhaustive.stderr  must_use.rs  newtype.rs  newtype.stderr  parts_non_exhaustive.rs
crates/linear_ty_lint/src/: lib.rs
crates/linear_type/: Cargo.toml
crates/linear_type/src/: lib.rs
crates/linear_type/tests/: compile_fail.rs
crates/linear_type/tests/compile_fail/: linear_non_exhaustive.rs  must_use.rs  newtype.stderr  parts_non_exhaustive.rs  parts_non_exhaustive.stderr
crates/lineart_lint/: Cargo.toml
embeds/: radicle.json
examples/: simple_states.rs
src/: lib.rs
tests/: compile_fail.rs
tests/compile_fail/: must_use.stderr  newtype.rs  newtype.stderr
