[package]
name = "linear_type"
version = "0.3.0"
edition = "2021"
authors = ["Christian Thäter <ct@pipapo.org>"]
description = "Linear types for rust"
license = "MIT OR Apache-2.0"
repository = "https://git.pipapo.org/cehteh/linear_type.git"
keywords = ["typesystem", "cell"]
categories = ["rust-patterns"]

[features]
compile_error = ["dep:no-panic"]

[dependencies]
no-panic = { version = "0.1.26", optional = true}

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[badges]
maintenance = { status = "actively-developed" }
